// Vitest Snapshot v1

exports[`VStack > should render correctly with children 1`] = `
<div>
  <div
    class="flex flex-col space-y-3 bg-red-500 rapid-stack"
  >
    <div>
      <p>
        Hello world!
      </p>
    </div>
    <div>
      <p>
        Hello world!
      </p>
    </div>
    <div>
      <p>
        Hello world!
      </p>
    </div>
    <div>
      <p>
        Hello world!
      </p>
    </div>
  </div>
</div>
`;

exports[`VStack > should render correctly with non default props 1`] = `
<div>
  <div
    class="flex flex-col space-y-1.5 p-4 rapid-stack"
  />
</div>
`;

exports[`VStack > should render default correctly 1`] = `
<div>
  <div
    class="flex flex-col space-y-6 rapid-stack"
  />
</div>
`;
